migrate to java 11